--- a/package.json
+++ b/package.json
@@ -9,7 +9,16 @@
   "author": "Lambda School",
   "license": "MIT",
   "devDependencies": {
-    "jest": "^23.6.0"
+    "jest": "^24.0.0"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nickoferrall/Testing.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/nickoferrall/Testing/issues"
+  },
+  "homepage": "https://github.com/nickoferrall/Testing#readme"
 }
